<resources>

    <string name="app_name">Cordel da Palavra</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Cadastre-se</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_username">Nome de usuário</string>
    <string name="hint_password">Senha</string>
    <string name="hint_password_confirm">Confirmar senha</string>
    <string name="hint_code">Insira seu código promocional aqui</string>
    <string name="btn_cadastre">Cadastrar</string>
    <string name="btn_login">Entrar</string>
    <string name="btn_register">Cadastre-se</string>
    <string name="title_activity_new_cordel">NewCordelActivity</string>
    <string name="err_msg_username">Insira um nome de usuário</string>
    <string name="err_msg_password">Insira uma senha</string>
    <string name="err_msg_password_confirm">Insira sua senha novamente</string>
    <string name="err_msg_code_promotional">Insira o código promocional</string>
    <string name="err_short_username">Nome de usuário muito curto</string>
    <string name="err_short_password">A senha deve conter no mínimo 6 caracteres</string>
    <string name="err_short_code_promotional">O código promocional deve conter 6 caracteres</string>
    <string name="btn_to_buy">Comprar</string>
    <string name="btn_code">Usar código promocional</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="developers">Desenvolvedores</string>
    <string name="designer">Designers</string>
    <string name="developers_name">José Aparecido Silvano de Albuquerque \nLucas Marlon Lira Marques \nMaria Daniela Costa Henrique</string>
    <string name="designs_name">Fábio Albuquerque Silva \nLayane Alves Oliveira \nPedro Henrique Camino Xavier</string>
    <string name="title_activity_about">Sobre</string>



</resources>
