<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/default_color"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:weightSum="5.4"
    android:gravity="center|top">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:layout_marginTop="20dp"
        android:gravity="center" >

        <ImageView
            android:id="@+id/bt_logo_fit_rest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:src="@drawable/logofinal200x200"
            android:scaleType="fitCenter"/>
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="Versão 1.0"
        android:textColor="@color/black"
        android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developers"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developers_name"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/designer"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/designs_name"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>


</LinearLayout>