<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="empsoft.ufcg.edu.cordeus.views.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:maxLength="50"
                    android:hint="@string/hint_username" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:hint="@string/hint_password" />
            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/btn_enter"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btn_register"
                android:textAllCaps="false"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="#000000"
                android:textSize="16sp"/>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
