<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/default_color"
    tools:context="empsoft.ufcg.edu.cordeus.views.RegisterActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:layout_marginTop="?attr/actionBarSize"
            android:gravity="center_horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:maxLength="50"
                    android:hint="@string/hint_username" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:hint="@string/hint_password" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:hint="@string/hint_password_confirm" />
            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/btn_cadastre"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_cadastre"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@layout/button_border"
                android:textColor="@android:color/white"/>
        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/loadingRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#64000000"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            style="?android:attr/progressBarStyleLarge"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
